...
                            role = Role.Button,
                            onClick = {
                                onProfileClick()
                                isAccountMenuExpanded = !isAccountMenuExpanded
                            }
                        )
                        .testTag("hub_dashboard_profile_icon"),
                    contentAlignment = Alignment.Center
                ) {
                    ProfileAvatarView(
                        avatarType = avatarType,
                        size = 32.dp,
                        modifier = Modifier.padding(1.dp)
...
